<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:background="@color/white"
        style="@style/Widget.AppCompat.Button.Borderless">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingTop="2dp"
            android:paddingBottom="8dp"
            android:background="@android:color/transparent"
            style="@style/Widget.MaterialComponents.Toolbar.Primary">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/gambar_logo"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/logohorizontal"
                android:fitsSystemWindows="true"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingTop="5dp"
      app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
      <ImageView
          android:id="@+id/grafis"
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:scaleType="fitCenter"
          android:contentDescription="@string/gambar_grafis"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="1"
          app:layout_constraintBottom_toTopOf="@id/container"
          android:src="@drawable/grafis1"/>
      <LinearLayout
          android:id="@+id/container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          android:paddingHorizontal="20dp"
          android:orientation="vertical">

          <TextView
              android:id="@+id/welcome"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="35dp"
              android:fontFamily="@font/lato_bold"
              android:text="@string/welcomemssg"
              android:textColor="@color/colorBlack"
              android:textSize="22sp" />

          <TextView
              android:id="@+id/thanks"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:fontFamily="@font/lato_light"
              android:text="@string/thanksmssg"
              android:textColor="@color/colorBlack"
              android:textSize="16sp"
              app:layout_constraintLeft_toRightOf="@id/ver1"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/welcome" />
          <TextView
              android:id="@+id/enjoy"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/lato_light"
              android:text="@string/enjoymssg"
              android:layout_marginTop="4dp"
              android:textSize="16sp"
              android:textColor="@color/colorBlack"/>

          <com.google.android.material.button.MaterialButton
              android:id="@+id/buttonreg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="15dp"
              android:fontFamily="@font/lato"
              android:text="@string/daftar_sekarang" />
          <com.google.android.material.button.MaterialButton
              android:id="@+id/buttonlog"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="35dp"
              android:fontFamily="@font/lato"
              style="@style/Widget.AppCompat.Button.Borderless"
              android:text="@string/masuk"
              android:textColor="@color/colorPrimary"/>
      </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>