<?xml version="1.0" encoding="utf-8"?>
<layout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools">
	<data>
		<variable
				name="LoginModel"
				type="com.caregiver.gocares.viewmodels.LoginViewModel" />
	</data>
	<androidx.coordinatorlayout.widget.CoordinatorLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		<com.google.android.material.appbar.AppBarLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="0dp"
				android:paddingEnd="5dp"
				android:background="@color/white"
				style="@style/Widget.AppCompat.Button.Borderless">
			<androidx.appcompat.widget.Toolbar
					android:id="@+id/toolbar"
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					app:menu="@menu/appbar1"
					android:paddingTop="2dp"
					android:paddingBottom="8dp"
					android:background="@android:color/transparent"
					style="@style/Widget.MaterialComponents.Toolbar.Primary">
				<ImageView
						android:id="@+id/logo"
						android:layout_width="125dp"
						android:layout_height="match_parent"
						android:layout_marginTop="10dp"
						android:layout_marginStart="20dp"
						android:contentDescription="@string/gambar_logo"
						android:scaleType="fitStart"
						app:srcCompat="@drawable/logohorizontal"
						android:fitsSystemWindows="true"/>
			</androidx.appcompat.widget.Toolbar>
		</com.google.android.material.appbar.AppBarLayout>
		<FrameLayout
				android:id="@+id/frameLayout"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
		<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/cons"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

			<ImageView
					android:id="@+id/grafis"
					android:layout_width="wrap_content"
					android:layout_height="0dp"
					android:contentDescription="@string/gambar_grafis"
					android:scaleType="fitEnd"
					android:src="@drawable/grafis2"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintHeight_percent="0.3"
					app:layout_constraintRight_toRightOf="parent" />

			<ScrollView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:layout_constraintTop_toTopOf="parent"
					android:orientation="vertical">
				<androidx.appcompat.widget.LinearLayoutCompat
						android:id="@+id/container"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingHorizontal="20dp"
						android:layout_marginTop="10dp"
						android:orientation="vertical">
					<include
							android:id="@+id/connectionError"
							layout="@layout/error_conn_header"
							android:visibility="gone"/>
					<com.google.android.material.textfield.TextInputLayout
							android:id="@+id/ilEmail"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/email"
							app:boxStrokeErrorColor="@color/colorRed"
							app:boxStrokeColor="@color/colorPrimary"
							app:boxStrokeWidthFocused="2dp"
							app:boxStrokeWidth="1dp"
							app:startIconDrawable="@drawable/email"
							app:startIconTint="@color/gray2"
							style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
						<com.google.android.material.textfield.TextInputEditText
								android:id="@+id/etEmail"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:inputType="textEmailAddress"
								android:paddingVertical="10dp"
								android:autofillHints="@string/email"
								android:fontFamily="@font/helvetica_light"
								android:paddingHorizontal="10sp"
								android:textSize="16sp"
								android:text="@={LoginModel.email}"/>
					</com.google.android.material.textfield.TextInputLayout>
					<com.google.android.material.textfield.TextInputLayout
							android:id="@+id/ilPass"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="15dp"
							android:hint="@string/password"
							app:boxStrokeColor="@color/colorPrimary"
							app:boxStrokeErrorColor="@color/colorRed"
							app:startIconDrawable="@drawable/pass"
							app:startIconTint="@color/gray2"
							app:endIconMode="password_toggle"
							app:boxStrokeWidthFocused="2dp"
							style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
						<com.google.android.material.textfield.TextInputEditText
								android:id="@+id/etPass"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:inputType="textPassword"
								android:paddingVertical="10dp"
								android:autofillHints="@string/email"
								android:text="@={LoginModel.password}"
								android:fontFamily="@font/helvetica_light"
								android:paddingHorizontal="10sp"
								android:textSize="16sp" />
					</com.google.android.material.textfield.TextInputLayout>
					<com.google.android.material.button.MaterialButton
							android:id="@+id/buttonlog"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="15dp"
							android:layout_marginBottom="25dp"
							android:text="@string/masuk"
							android:onClick="@{() -> LoginModel.onLoginClick()}"
							android:fontFamily="@font/lato"
							/>
				</androidx.appcompat.widget.LinearLayoutCompat>
			</ScrollView>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>