<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="RegModel"
            type="com.caregiver.gocares.viewmodels.RegViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:background="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/appbar1"
                android:paddingTop="2dp"
                android:paddingBottom="8dp"
                android:background="@android:color/transparent"
                style="@style/Widget.MaterialComponents.Toolbar.Primary">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="125dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/gambar_logo"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/logohorizontal"
                    android:fitsSystemWindows="true"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/progressbar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            android:background="@drawable/backbluebig3"
            app:layout_constraintBottom_toBottomOf="@id/container"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/container"
            >
            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Large.MultiplePulse"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                app:SpinKit_Color="@color/colorAccent" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/cons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="10dp">
                <include
                    android:id="@+id/connectionError"
                    layout="@layout/error_conn_header"
                    android:visibility="gone"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:boxStrokeErrorColor="@color/colorRed"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:paddingVertical="12dp"
                        android:autofillHints="@string/email"
                        android:fontFamily="@font/helvetica_light"
                        android:paddingHorizontal="10sp"
                        android:textSize="16sp"
                        android:text="@={RegModel.email}"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ilNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/nama"
                    android:textDirection="firstStrong"
                    app:boxStrokeErrorColor="@color/colorRed"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingVertical="12dp"
                        android:autofillHints="@string/name"
                        android:fontFamily="@font/helvetica_light"
                        android:paddingHorizontal="10sp"
                        android:textSize="16sp"
                        android:text="@={RegModel.nama}"/>
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ilUmur"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintWidth_percent="0.475"
                        android:hint="@string/umur"
                        app:boxStrokeErrorColor="@color/colorRed"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidthFocused="2dp"
                        app:boxStrokeWidth="1dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUmur"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="2"
                            android:paddingVertical="12dp"
                            android:autofillHints="@string/age"
                            android:fontFamily="@font/helvetica_light"
                            android:paddingHorizontal="10sp"
                            android:textSize="16sp"
                            android:text="@={RegModel.umur}"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ilGender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintWidth_percent="0.475"
                        android:hint="@string/gender"
                        app:boxStrokeErrorColor="@color/colorRed"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidthFocused="2dp"
                        app:boxStrokeWidth="1dp"
                        app:layout_constraintTop_toTopOf="@id/ilUmur"
                        app:layout_constraintRight_toRightOf="parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/etGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:textCursorDrawable="@null"
                            android:paddingVertical="12dp"
                            android:autofillHints="@string/gender"
                            android:fontFamily="@font/helvetica_light"
                            android:paddingHorizontal="10sp"
                            android:textSize="16sp"
                            android:text="@={RegModel.gender}"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ilTelepon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/telepon"
                    android:textDirection="firstStrong"
                    app:boxStrokeErrorColor="@color/colorRed"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTelepon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:paddingVertical="12dp"
                        android:autofillHints="phone"
                        android:fontFamily="@font/helvetica_light"
                        android:paddingHorizontal="10sp"
                        android:textSize="16sp"
                        android:text="@={RegModel.telepon}"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ilAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/alamat"
                    android:textDirection="firstStrong"
                    app:boxStrokeErrorColor="@color/colorRed"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:paddingVertical="12dp"
                        android:autofillHints="address"
                        android:fontFamily="@font/helvetica_light"
                        android:paddingHorizontal="10sp"
                        android:textSize="16sp"
                        android:text="@={RegModel.alamat}"/>
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ilPass1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintWidth_percent="0.475"
                        android:hint="@string/password"
                        app:boxStrokeErrorColor="@color/colorRed"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidthFocused="2dp"
                        app:boxStrokeWidth="1dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPass1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:paddingVertical="12dp"
                            android:autofillHints="password"
                            android:fontFamily="@font/helvetica_light"
                            android:paddingHorizontal="10sp"
                            android:textSize="16sp"
                            android:text="@={RegModel.password1}"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ilPass2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintWidth_percent="0.475"
                        android:hint="@string/ulang_password"
                        app:boxStrokeErrorColor="@color/colorRed"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidthFocused="2dp"
                        app:boxStrokeWidth="1dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPass2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:paddingVertical="12dp"
                            android:autofillHints="password"
                            android:fontFamily="@font/helvetica_light"
                            android:paddingHorizontal="10sp"
                            android:textSize="16sp"
                            android:text="@={RegModel.password2}"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonreg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/daftar"
                    android:fontFamily="@font/lato"
                    android:onClick="@{() -> RegModel.onRegClick()}"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>